--- a/_data/2021/law/participants.yml
+++ b/_data/2021/law/participants.yml
@@ -44,6 +44,11 @@ She holds a Master's Degree in Economics of International Institutions and a Bac
   image: /assets/images/IlyaIlin.jpg
   bio: "Ilya is a Junior Research Fellow in IT Law and Ph.D. student of the School of Law at the Tartu University (Estonia). He holds a Master’s degree in Information Technology Law from the University of Tartu and a Specialist’s degree in Law from the St. Petersburg State Engineering and Economic University (Russia). His area of research concerns the legal aspects of Natural Language Processing (NLP) development. Within research, he explores the application of various NLP techniques and their components, such as speech and voice, in the information technology sphere from the perspective of intellectual property and data protection law. "
   website: https://www.etis.ee/CV/Ilya_Ilin/eng  
+
+- name: Joanna Strycharz
+  image: /assets/images/JoannaStrycharz.JPG
+  bio: "Joanna Strycharz is an assistant professor of persuasive communication at the Amsterdam School of Communication Research. Her research focuses on how insights gained from data can be used to adjust communication between organizations and consumers. She is also interested in how such data-driven communication impacts cognitions, attitudes, and behavior of consumers as well as what unintended effects such communication has on individuals and the society. Joanna has completed a PhD in Persuasive Communication at the Amsterdam School of Communication Research, in an interdisciplinary cooperation with the Institute for Information Law. In her PhD project, she examined consumer knowledge of data-driven personalized marketing and its influence on consumer privacy behaviors and  consumer empowerment. Additionally, Joanna was a visiting scholar at the Hubbart School of Journalism and Mass Communication at the University of Minnesota."
+  website: 
   
 - name: Katharina Luckner
   image: /assets/images/KatharinaLuckner.jpeg
