--- a/_data/2021/london/participants.yml
+++ b/_data/2021/london/participants.yml
@@ -55,7 +55,7 @@
   
 - name: Melody Sepahpour-Fard
   image: /assets/images/1Wq82WCL6zBx-LCfKZkVlW4EWxatMbARx.jpeg
-  bio: Melody Sepahpour-Fard has a background in psychology and linguistics. She is currently a social psychology master's student in a European programme (Global-MINDS). Soon, she will join the Centre for Research Training (CRT) programme in Foundations of Data Science at the University of Limerick. She will study opinion-based networks on social media to better understand social polarization around immigration.
+  bio: Melody Sepahpour-Fard is an incoming PhD student at the Centre for Research Training in Foundations of Data Science, University of Limerick. Her research interests broadly lie in between Social Psychology and NLP. For her doctoral thesis, she will explore opinion-based networks on social media to better measure social polarisation around immigration. She has previously studied Psychology and Language Sciences, and is currently finishing a Social Psychology European master's programme (named Global-MINDS).
   
 - name: Michael Geers
   image: /assets/images/1EIMoOrNtl7b48hRhR6Fo1rv3YihF_D8h.jpeg
