--- a/_data/2021/princeton/schedule.yml
+++ b/_data/2021/princeton/schedule.yml
@@ -21,25 +21,28 @@
 - date: 2021-06-15
   name: Collecting Digital Trace Data
   events:
-    - name: "10:00 - 10:15 Logistics and introduction to [group exercise]([Lesson plan (participants)](https://compsocialscience.github.io/summer-institute/2021/materials/day2-digital-trace-data/Group_Exercise_Day_2.html)) (*Zoom*)"
-    - name: "10:15 - 11:30 Identify a Research Question with Digital Trace Data (*Zoom*)"
+    - name: "10:00 - 10:15 Logistics and introduction to group exercise (*Zoom*)"
+    - name: "10:15 - 11:30 Designing a Research Question with Digital Trace Data (*Zoom*)"
     - name: "11:30 - 12:00 Break"
-    - name: "12:00 - 1:00 Participant flash talks (encouraged) (*Zoom*)"
+    - name: "12:00 - 12:15 Flash talk: Marcos Gallo"
+    - name: "12:15 - 12:30 Flash talk: Katherine Keith"
+    - name: "12:30 - 12:45 Flash talk: Killian McLoughlin"
     - name: "1:00 - 1:15 Break"
-    - name: "1:15 - 2:30 Develop a Sampling Frame (*Zoom*)"
-    - name: "2:30 - 3:30 Populate the Sampling Frame with Screen-Scraping (*Zoom*)"
+    - name: "1:15 - 2:30 Collecting Digital Trace Data (*Zoom*)"
+    - name: "2:30 - 3:30 Discussing Strengths & Benefits plus Hybrid Designs (*Zoom*)"
     - name: "3:30 - 3:45 Debrief and logistics (*Zoom*)"
     - name: "3:45 - 4:00 Break"
 
 - date: 2021-06-16
   name: Automated Text Analysis
   events:
-    - name: "10:00 - 10:15 Logistics and introduction to [group exercise](https://compsocialscience.github.io/summer-institute/2021/materials/day3-text-analysis/Group-Exercise-Day-3.html) (*Zoom*)"
-    - name: "10:15 - 11:30 Extract Features from Trump Tweets (*Zoom*)"
+    - name: "10:00 - 10:15 Logistics and introduction to group exercise (*Zoom*)"
+    - name: "10:15 - 11:30 Group Exercise (*Zoom*)"
     - name: "11:30 - 12:00 Break"
-    - name: "12:00 - 1:00 Participant flash talks (encouraged) (*Zoom*)"
+    - name: "12:00 - 12:15 Flash talk: Tamara van der Does"
+    - name: "12:15 - 12:30 Flash talk: Yash Tadimalla"
     - name: "1:00 - 1:15 Break"
-    - name: "1:15 - 3:30 Predict Features of Tweets associated with Retweets and Produce Visualization (*Zoom*)"
+    - name: "1:15 - 3:30 Group Exercise (*Zoom*)"
     - name: "3:30 - 3:45 Debrief and logistics (*Zoom*)"
 
 - date: 2021-06-17
@@ -49,7 +52,9 @@
     - name: "10:15 - 10:30 [Introduction to the group exercise](https://github.com/compsocialscience/summer-institute/blob/master/2021/materials/day4-surveys/activity/intro-to-activity.pdf), [Lesson plan (participants)](https://github.com/compsocialscience/summer-institute/blob/master/2021/materials/day4-surveys/activity/lesson_plan_survey_participants.md); [Lesson plan (instructors)](https://github.com/compsocialscience/summer-institute/blob/master/2021/materials/day4-surveys/activity/lesson_plan_survey_instructor.md) (*Zoom*)"
     - name: "10:30 - 11:30 Morning group exercise (*Zoom*)"
     - name: "11:30 - 12:00 Break"
-    - name: "12:00 - 1:00 Participant flash talks (encouraged) (*Zoom*)"
+    - name: "12:00 - 12:15 Flash talk: Nozomi Nakajima"
+    - name: "12:15 - 12:30 Flash talk: Carolina Coimbra Vieira"
+    - name: "12:30 - 12:45 Flash talk: Andrey Indukaev"
     - name: "1:00 - 1:15 Break"
     - name: "1:15 - 3:00 Afternoon group exercise (*Zoom*)"
     - name: "3:00 - 3:15 Break"
@@ -63,7 +68,8 @@
     - name: "10:15 - 10:30 Introduction to the group exercise [Video](https://www.youtube.com/watch?v=ZI95vV7Co38) [Slides](https://github.com/compsocialscience/summer-institute/blob/master/2020/materials/day5-mass-collaboration/06-ffchallenge_participate_activity.pdf) (*Zoom*)"
     - name: "10:30 - 11:30 Participate in the Fragile Families Challenge actvity [Lesson plan (participants)](https://github.com/compsocialscience/summer-institute/blob/master/2021/materials/day5-mass-collaboration/activity/lesson_plan_masscollaboration_participant.md#lesson-plan-for-participants); [Lesson plan (instructors)](https://github.com/compsocialscience/summer-institute/blob/master/2021/materials/day5-mass-collaboration/activity/lesson_plan_masscollaboration_instructor.md#lesson-plan-for-instructors) (*Zoom*)"
     - name: "11:30 - 12:00 Break"
-    - name: "12:00 - 1:00 Participant flash talks (encouraged) (*Zoom*)"
+    - name: "12:00 - 12:15 Flash talk: Mario Molina"
+    - name: "12:15 - 12:30 Flash talk: Luca Maria Pesando"
     - name: "1:00 - 1:15 Break"
     - name: "1:15 - 3:00 Continue participating in the Fragile Families Challenge activity (*Zoom*)"
     - name: "3:00 - 3:15 Break"
