--- a/_data/2021/istanbul/schedule.yml
+++ b/_data/2021/istanbul/schedule.yml
@@ -142,7 +142,7 @@
   name: Method Talk and Work on Group Projects
   events:
      - name: "16:00-17:00 Office Hour and Flash Talks of Group Projects on Wonder"  
-     - name: "17:00-20:00 **Natural Language Processing and Applications to Computational Social Science by [Kemal Oflazer](https://www.andrew.cmu.edu/user/ko/)"
+     - name: "17:00-20:00 **Natural Language Processing and Applications to Computational Social Science** by [Kemal Oflazer](https://www.andrew.cmu.edu/user/ko/)"
      - name: "**Description**: This talk will introduce the participants to basic concepts and techniques of Natural Language Processing in an interactive fashion and will highlight aspect to Turkish that make it a challenge. It will then provide an overview of NLP applications in social sciences."
 
        
