--- a/_data/2021/bologna/schedule.yml
+++ b/_data/2021/bologna/schedule.yml
@@ -64,7 +64,7 @@
   events:
     - name: "10:00 - 12:15 Gian Maria Campedelli:Complex networks, AI and computational methods for terrorism research: applications and challenges (*Zoom*)"
     - name: "12:30 - 14:30 Brown Bag Seminar: Workshop  Individual Projects (*Zoom*)"
-    - name: "17:00 - 18:30 Chris Albon (*Zoom*)"
+    - name: "17:00 - 18:30 Chris Albon: Machine Learning at Wikimedia? (*Zoom*)"
 
 - date: 2021-07-01
   name: Invited speakers and workshop on individual projects 
