--- a/_data/2021/bologna/schedule.yml
+++ b/_data/2021/bologna/schedule.yml
@@ -71,7 +71,7 @@
   events:
     - name: "10:00 - 12:15 Sönke Ehret:Online Experiments and Virtual Labs: Issues, Trends, and Practical Matters (*Zoom*)"
     - name: "12:30 - 13:45 Brown Bag Seminar: Workshop Individual Projects (*Zoom*)"
-    - name: "14:00 - 16:30 Francesco Rampazzo (*Zoom*)"
+    - name: "14:00 - 16:30 Francesco Rampazzo: Following a Trail of Breadcrumbs: a Study of Migration through Digital Traces (*Zoom*)"
 
 - date: 2021-07-02
   name: Invited speakers and workshop on individual projects 
