--- a/_data/2021/hse/schedule.yml
+++ b/_data/2021/hse/schedule.yml
@@ -51,7 +51,8 @@
     - name: "12:15 - 12:30 [Introduction to the group exercise](https://github.com/compsocialscience/summer-institute/blob/master/2021/materials/day4-surveys/activity/intro-to-activity.pdf) (*Zoom*)"
     - name: "12:30 - 13:30 Morning group exercise based on the pre-recorded lectures [Day 4](https://sicss.io/curriculum) (*Zoom*)"
     - name: "13:30 - 14:00 Break"
-    - name: "14:00 - 15:00 Participant flash talks (encouraged) (*Zoom*)"
+    - name: "14:00 - 14:15 Flash-talk: Alex Knorre. Where people shoot? Spatial analysis of gun violence in Philadelphia (*Zoom*)"
+    - name: "14:15 - 15:00 Participant flash talks (encouraged) (*Zoom*)"
     - name: "15:00 - 15:15 Break"
     - name: "15:15 - 17:00 Afternoon group exercise (*Zoom*)"
     - name: "17:00 - 17:15 Break"
