add a session to Pre-SICSS

--- a/_data/2021/istanbul/schedule.yml
+++ b/_data/2021/istanbul/schedule.yml
@@ -53,7 +53,18 @@
 
 
 - date: 2021-06-09
-  name: "Code Walkthrough: Automated Text Analysis"
+  name: "Code Walkthrough: Automated Text Analysis-1"
+  events: 
+      - name: "19:30-20:00 Networking on Wonder"
+      - name: "20:00-21:00 Text Basics"
+      - name: "21:00-21:10 Short Break"
+      - name: "21:10-22:00 Introduction to [RegExr](https://regexr.com/)"
+      - name: "22:00-22:30 Networking on Wonder"
+      - name: "* [Replication Codes](https://github.com/compsocialscience/summer-institute/blob/master/2021/materials/istanbul/Replication%20Codes/Automated%20Text%20Analysis.Rmd)"
+      - name: "* SICSS Learning Material: [Day 3-Automated Text Analysis](https://sicss.io/boot_camp/)"
+
+- date: 2021-06-10
+  name: "Code Walkthrough: Automated Text Analysis-2"
   events: 
       - name: "19:30-20:00 Networking on Wonder"
       - name: "20:00-21:00 Text Analysis with [quanteda package](https://quanteda.io/articles/pkgdown/quickstart.html)-1"
@@ -62,7 +73,7 @@
       - name: "22:00-22:30 Networking on Wonder"
       - name: "* [Replication Codes](https://github.com/compsocialscience/summer-institute/blob/master/2021/materials/istanbul/Replication%20Codes/Automated%20Text%20Analysis.Rmd)"
       - name: "* SICSS Learning Material: [Day 3-Automated Text Analysis](https://sicss.io/boot_camp/)"
-        
+           
 - date: 2021-06-11
   name: "Code Walkthrough: Data Visualization and Reporting"
   events: 
