--- a/_data/2021/hse/schedule.yml
+++ b/_data/2021/hse/schedule.yml
@@ -35,9 +35,9 @@
   name: Automated Text Analysis and Networks Science
   events:
     - name: "12:00 - 12:15 Logistics and introduction to group exercise (*Zoom*)"
-    - name: "12:15 - 13:30 Group Exercise based on the pre-recorded lectures [(Day 3)](https://sicss.io/curriculum) (*Zoom*)"
+    - name: "12:15 - 13:30 Group Exercise based on the pre-recorded lectures [(Day 3)](https://sicss.io/curriculum). [Lesson plan (participants)](https://docs.google.com/document/d/1JGilW7WKmXtFNtrBc51WmL-pRMZ7bz-vpxKclx68lWM/edit?usp=sharing) (*Zoom*)"
     - name: "13:30 - 14:00 Break"
-    - name: "14:00 - 15:00 Group Exercise based on the pre-recorded lectures [(Day 3)](https://sicss.io/curriculum) (*Zoom*)"
+    - name: "14:00 - 15:00 Continue participating in the group exercise (*Zoom*)"
     - name: "15:00 - 15:30 Break"
     - name: "15:30 - 17:00 Sofia Dokuka. Social network analysis: research design (*Zoom*)"
     - name: "17:30 - 17:45 Break"
