--- a/_data/2021/istanbul/schedule.yml
+++ b/_data/2021/istanbul/schedule.yml
@@ -160,8 +160,8 @@
 - date: 2021-06-23
   name: Code Walkthrough and Work on Group Projects
   events:
-     - name: "19:00-20:00 Office Hour and Flash Talks of Group Projects on Wonder"  
-     - name: "20:00-22:00 **Computational Text Analysis using R** by [Ahmet Kurnaz](https://sicss.io/2021/istanbul/people)"
+     - name: "16:00-17:00 Office Hour and Flash Talks of Group Projects on Wonder"  
+#    - name: "20:00-22:00 **Computational Text Analysis using R** by [Ahmet Kurnaz](https://sicss.io/2021/istanbul/people)"
      
       
 - date: 2021-06-24
