--- a/_data/2021/howard-mathematica/people.yml
+++ b/_data/2021/howard-mathematica/people.yml
@@ -61,10 +61,16 @@ speakers:
 roundtable discussions:
   title: Roundtable Discussions
   people:
+    - name: Howard University
+      image: /assets/images/HowardULogo.png
+      bio: "Howard University has long held a commitment to the study of disadvantaged persons in American society and throughout the world. The goal is the elimination of inequities related to race, color, social, economic and political circumstances. As the only truly comprehensive predominantly Black university, Howard is one of the major engineers of change in our society. Through its traditional and cutting-edge academic programs, the University seeks to improve the circumstances of all people in the search for peace and justice on earth."
+      website: https://home.howard.edu/ 
+      
     - name: Mathematica
       image: /assets/images/MathematicaStackedLogo.jpeg
       bio: "Mathematica is the insight partner that illuminates the path to progress for public- and private-sector changemakers. We apply expertise at the intersection of data, methods, policy, and practice, translating big questions into deep insights that weather the toughest tests. Driven by our mission to improve public well-being, we collaborate closely with our clients to improve programs, refine strategies, and enhance understanding."     
       website: https://mathematica.org/
+      
      
 lunchtime talks:
   title: Bite-Sized Lunchtime Talks
