--- a/_data/2021/beijing/schedule.yml
+++ b/_data/2021/beijing/schedule.yml
@@ -4,28 +4,28 @@
   name: ""
   events:
     - name: "8:00 - 8:25 Introduction and logistics"
-    - name: "8:30 - 9:25 Speeding dating"
+    - name: "8:30 - 9:25 Speed dating"
     - name: "9:30 - 10:55 Reading group: Introduction to networks"
     - name: "21:00 - 22:30 Sandy Pentland speaks at SICSS Beijing + Q&A"
 
 - date: 2021-06-15
   name: ""
   events:
-    - name: "8:30 - 9:25 Speeding dating"
+    - name: "8:30 - 9:25 Speed dating"
     - name: "9:30 - 10:55 Reading group: Machine learning and networks"
     - name: "21:00 - 22:30 Shan Huang speaks at SICSS Beijing + Q&A"
 
 - date: 2021-06-16
   name: ""
   events:
-    - name: "8:30 - 9:25 Speeding dating"
+    - name: "8:30 - 9:25 Speed dating"
     - name: "9:30 - 10:55 Reading group: Social contagion and collective intelligence"
     - name: "21:00 - 23:00 Nynke Niezink speaks at SICSS Beijing + 1:1 meetings"
 
 - date: 2021-06-17
   name: ""
   events:
-    - name: "8:30 - 9:25 Speeding dating"
+    - name: "8:30 - 9:25 Speed dating"
     - name: "9:30 - 10:55 Reading group: Misinformation and polorization"
     - name: "21:00 - 23:00 Chris Bail speaks at SICSS Beijing + 1:1 meetings"
     
@@ -67,7 +67,7 @@
   name: ""
   events:
     - name: "8:30 - 9:25 Participants discuss team projects (organized by each team separately; each team can schedule extra meeting/discussion)"
-    - name: "9:30 - 11:00 Participants' research presentation: Xiduo, Xin, Yanni, Yingdan, Yiyan, Zhaowen"
+    - name: "9:30 - 11:00 Participants' research presentation: Xiduo, Yanni, Yingdan, Yiyan, Zhaowen"
     - name: "21:00 - 23:00 Morgan Frank speaks at SICSS Beijing + 1:1 meetings"
 
 - date: 2021-06-25
