--- a/_data/2021/istanbul/schedule.yml
+++ b/_data/2021/istanbul/schedule.yml
@@ -158,7 +158,7 @@
 
        
 - date: 2021-06-23
-  name: Code Walkthrough and Work on Group Projects
+  name: Work on Group Projects
   events:
      - name: "16:00-17:00 Office Hour and Flash Talks of Group Projects on Wonder"  
 #    - name: "20:00-22:00 **Computational Text Analysis using R** by [Ahmet Kurnaz](https://sicss.io/2021/istanbul/people)"
