--- a/_data/2021/hse/schedule.yml
+++ b/_data/2021/hse/schedule.yml
@@ -52,13 +52,13 @@
   events:
     - name: "12:00 - 12:15 Logistics (*Zoom*)"
     - name: "12:15 - 12:30 [Introduction to the group exercise](https://github.com/compsocialscience/summer-institute/blob/master/2021/materials/day4-surveys/activity/intro-to-activity.pdf) (*Zoom*)"
-    - name: "12:30 - 13:30 Morning group exercise based on the pre-recorded lectures [Day 4](https://sicss.io/curriculum) (*Zoom*)"
+    - name: "12:30 - 13:30 Non-probability-based Surveys in Practice: group exercise based on the pre-recorded lectures [Day 4](https://sicss.io/curriculum). [Lesson plan (participants)](https://docs.google.com/document/d/1-Q6GcFTM_WDiEHOmjgQmfG7yWeWueNXhBE9VbvjlAWo/edit?usp=sharing) (*Zoom*)"
     - name: "13:30 - 14:00 Break"
     - name: "14:00 - 14:15 Flash-talk: Alex Knorre. Where people shoot? Spatial analysis of gun violence in Philadelphia (*Zoom*)"
     - name: "14:15 - 15:00 Participant flash talks (encouraged) (*Zoom*)"
     - name: "15:00 - 15:15 Break"
-    - name: "15:15 - 17:00 Afternoon group exercise (*Zoom*)"
-    - name: "17:00 - 17:15 Whole group debrief about group exercise (*Zoom*)"
+    - name: "15:15 - 17:00 Continue participating in the group exercise (*Zoom*)"
+    - name: "17:00 - 17:15 Whole group debrief about the group exercise (*Zoom*)"
     - name: "17:15 - 17:45 Break"    
     - name: "17:45 - 18:45 Ivan Smirnov. How to publish a computational social science paper? (*Zoom*)"
     - name: "18:45 - 19:00 Debrief and logistics (*Zoom*)"
