--- a/_data/2021/law/schedule.yml
+++ b/_data/2021/law/schedule.yml
@@ -1,4 +1,4 @@
-- date: Provisional schedule. All times are in Central European Summer Time
+- date: All times are in Central European Summer Time
 
 - date: 2021-06-13
   events:
@@ -12,7 +12,7 @@
     - name: "14.00 - 14.30 Break"
     - name: "14.30 - 15.30 Guest speaker: Teun J Dekker (*Zoom*)"
     - name: "15.30 - 15.45 Break"
-    - name: "15.45 - 16.00 Introduction to the group exercise: [Lesson plan (participants)](https://github.com/compsocialscience/summer-institute/blob/master/2021/materials/day1-intro-ethics/small_group_discussions.md) (*Zoom*)"
+    - name: "15.45 - 16.00 Introduction to the group exercise: [Lesson plan](https://github.com/compsocialscience/summer-institute/blob/master/2021/materials/day1-intro-ethics/activity/lesson_plan_ethics_participant.md) (*Zoom*)"
     - name: "16.00 - 17.45 Group exercise: [Case study](https://bdes.datasociety.net/wp-content/uploads/2016/10/Patreon-Case-Study.pdf) (*Zoom*)"
     - name: "17.45 - 18.00 Break"
     - name: "18.00 - 19.15 Keynote speaker: Michael A. Livermore (*Zoom*)"
@@ -31,14 +31,12 @@
     
 - date: 2021-06-16
   name: "<b>Automated text analysis</b>"
-  events:
-    - name: "12.00 - 13.00 Guest speaker: Daniel Preotiuc (*Zoom*)"
-    - name: "13.00 - 13.15 Break"
-    - name: "13.15 - 14.15 Small group lunches (*Zoom*)"
-    - name: "14.15 - 14.45 Break"
-    - name: "14.45 - 15.00 Introduction to the group exercise (*Zoom*)"
-    - name: "15.00 - 18.00 Group exercise: [Lesson Plan](https://compsocialscience.github.io/summer-institute/2020/materials/day3-text-analysis/Group-Exercise-Day-3.html) (*Zoom*)"
-    - name: "18.00 - 19.00 Whole group debrief about group exercise (*Zoom*)"
+  events:  
+    - name: "11.45 - 12.00 Introduction to the group exercise (*Zoom*)"
+    - name: "12.00 - 15.00 Group exercise: [Lesson Plan](https://compsocialscience.github.io/summer-institute/2020/materials/day3-text-analysis/Group-Exercise-Day-3.html) (*Zoom*)"
+    - name: "15.00 - 16.00 Guest speaker: Daniel Preotiuc (*Zoom*)"
+    - name: "16.00 - 16.30 Break"   
+    - name: "16.30 - 17.30 Whole group debrief about group exercise (*Zoom*)"
     
 - date: 2021-06-17
   name: "<b>Surveys in the Digital Age</b>"
