--- a/_data/2021/beijing/schedule.yml
+++ b/_data/2021/beijing/schedule.yml
@@ -60,7 +60,7 @@
   name: ""
   events:
     - name: "8:30 - 9:25 Participants discuss team projects (organized by each team separately; each team can schedule extra meeting/discussion)"
-    - name: "9:30 - 11:00 Participants' research presentation: Jasmine, Kunru, Sachin, Shengchun, Shiyang"
+    - name: "9:30 - 11:00 Participants' research presentation: Kunru, Sachin, Shengchun, Shiyang, Jasmine"
     - name: "21:00 - 23:00 Mohsen Mosleh speaks at SICSS Beijing + 1:1 meetings"
 
 - date: 2021-06-24
