--- a/_data/2021/howard-mathematica/schedule.yml
+++ b/_data/2021/howard-mathematica/schedule.yml
@@ -5,19 +5,24 @@
   events: 
     - name: "10:00 - 11:45 Welcome, Praxis to Power Day 1 Introduction and logistics (*Zoom*)"
     - name: "11:45 - 12:00 Break"
-    - name: "12:00 - 1:00 Personal Experiences of African Americans in the Academy, with Terri Adams-Fuller, Ph.D, Britany Gatewood, Brandon Hogan, Bahiyyah Muhammad (*Zoom*)"
+    - name: "12:00 - 1:00 Personal Experiences of African Americans in the Academy, with Terri Adams-Fuller, Ph.D., Britany Gatewood, Ph.D.,  Brandon Hogan, Ph.D.,  Bahiyyah Muhammad, Ph.D. (*Zoom*)"
     - name: "1:15 - 1:45 Choosing Self-Care in a Hostile World (*Zoom*)"
     - name: "1:45 - 2:00 Break"
-    - name: "2:00 - 5:00 Making Computational Methods Accessible: R big picture (tidyverse) + data wrangling with Jae Yeon Kim, Ph.D., Assistant Professor, KDI School of Public Policy and Management [Workshop materials](https://github.com/jaeyk/sicss-howard-r-boot-camp)(*Zoom*)"
+    - name: "2:00 - 5:00 Making Computational Methods Accessible: R big picture (tidyverse) + data wrangling with Jae Yeon Kim, Ph.D., Assistant Professor, Korea Development Institute School of Public Policy and Management [Workshop materials](https://github.com/jaeyk/sicss-howard-r-boot-camp)(*Zoom*)"
 
 - date: 2021-06-13
   name: Praxis to Power Pre-Institute
   events:
     - name: "10:00 - 11:00 Praxis to Power Day 2 Introduction and logistics (*Zoom*)"
-    - name: "2:00 - 5:00 Making Computational Methods Accessible: data visualization with Jae Yeon Kim, Ph.D., Assistant Professor, KDI School of Public Policy and Management [Workshop materials](https://github.com/jaeyk/sicss-howard-r-boot-camp) (*Zoom*)"
+    - name: "11:00 - 2:00 Open Office Hours, SICSS-Howard/Mathematica Exclusive Content Review (on your own), or Pre-Arrival Material Review (on your own)"
+    - name: "2:00 - 5:00 Making Computational Methods Accessible: data visualization with Jae Yeon Kim, Ph.D., Assistant Professor, Korea Development Institute School of Public Policy and Management [Workshop materials](https://github.com/jaeyk/sicss-howard-r-boot-camp) (*Zoom*)
+              - Open Office Hours (*Zoom*
+              - Review Pre-arrival materials
+              - Get to know the SICSS & SICSS-Howard/Mathematica 2021 Inaugural Planning Team
+              - Changing the Game"
     - name: "5:00 - 5:15 Break"
     - name: "5:15 - 6:15 SICSS-Howard/Mathematica Kick-off and Opening Plenary: President Wayne A.I. Frederick, Howard University (*Zoom*)"
-    - 
+
     
 - date: 2021-06-14
   name: "Day 1: Introduction and Ethics"
@@ -90,6 +95,7 @@
     - name: "3:15 - 3:30 Whole group debrief about group exercise (*Zoom*)"
     - name: "3:30 - 3:45 Debrief and logistics (*Zoom*)"
     - name: "3:45 - 4:00 [Delete](https://github.com/compsocialscience/summer-institute/blob/master/2021/materials/day5-mass-collaboration/activity/lesson_plan_masscollaboration_participant.md#deleting-the-files-after-use) the Fragile Families data from your computer"
+    - name: "4:00 - 5:00 Data assurance checks"
 
 - date: 2021-06-19
   name: Day off
@@ -100,7 +106,8 @@
 - date: 2021-06-21
   name: "Day 6: Work on group projects and participate in SICSS Festival"
   events:
-  - name: "10:00 - 12:00 TBD"
+  - name: "10:00 - 10:15 Logistics (*Zoom*)"
+  - name: "10:15 - 12:00 TBD"
   - name: "12:00 - 1:00 Small group lunches or participant flash talks (encouraged) (*Zoom*)"
   - name: "1:00 - 4:00 TBD"
   - name: "4:00 - 5:30 Ruha Benjamin, Ph.D., Associate Professor of African American Studies, Princeton University - live session to include Q&A and office hours"
@@ -108,7 +115,8 @@
 - date: 2021-06-22
   name: "Day 7: Work on group projects and participate in SICSS Festival"
   events:
-  - name: "10:00 - 12:00 TBD"
+  - name: "10:00 - 10:15 Logistics (*Zoom*)"
+  - name: "10:15 - 12:00 TBD"
   - name: "12:00 - 1:00 Bite-Sized Lunchtime Talk: The University of California's Publisher Negotiation Team (encouraged) (*Zoom*)"
   - name: "1:00 - 4:00 TBD" 
   - name: "4:00 - 5:30 Chris Wheat, Ph.D., Co-President, JP Morgan Chase Institute - live session to include Q&A and office hours"
@@ -116,7 +124,8 @@
 - date: 2021-06-23
   name: "Day 8: Work on group projects and participate in SICSS Festival"
   events:
-  - name: "10:00 - 12:00 TBD"
+  - name: "10:00 - 10:15 Logistics (*Zoom*)"
+  - name: "10:15 - 12:00 TBD"
   - name: "12:00 - 1:00 Live Mathematica Roundtable (encouraged) (*Zoom)"
   - name: "1:00 - 4:00 TBD"
   - name: "4:00 - 5:30 Naomi Sugie, Ph.D., Associate Professor of Criminology, Law, and Society, University of California Irvine - live session to include Q&A and office hour"
@@ -124,7 +133,8 @@
 - date: 2021-06-24
   name: "Day 9: Work on group projects and participate in SICSS Festival"
   events:
-  - name: "10:00 - 4:00 TBD"
+  - name: "10:00 - 10:15 Logistics (*Zoom*)"
+  - name: "10:15 - 4:00 TBD"
   - name: "12:00 - 1:00 Bite-Sized Lunchtime Talk: vary CSS (encouraged) (*Zoom)" 
   - name: "1:00 - 4:00 TBD"
   - name: "4:00 - 5:30 Laura Nelson, Ph.D., Assistant Professor of Sociology, Northeastern University - live session to include Q&A and office hour"
@@ -132,11 +142,11 @@
 - date: 2021-06-25
   name: "Day 10: Present group projects and participate in SICSS Festival"
   events:
-  - name: "10:00 - 12:00 TBD"
-  - name: "12:00 - 1:00 Live lunchtime address and Q&A, Paul Decker, President and Chief Executive Officer, Mathematica"
-  - name: "1:00 - 1:15 Break"
-  - name: "1:15 - 4:15 Present group projects (*Zoom*)"
-  - name: "4:15 - 4:30 Debrief and conclusion"
-  - name: "4:30 - 4:45 Break"
-  - name: "4:45 - 6:15 SICSS-Howard/Mathematica 2021 Keynote Address, Timnit Gebru, Ph.D., Co-founder, Black in AI"
-    
+  - name: "10:00 - 10:15 Logistics"
+  - name: "10:15 - 10:30 Break"
+  - name: "10:30 - 12:00 SICSS-Howard/Mathematica 2021 Keynote Address, Timnit Gebru, Ph.D., Co-founder, Black in AI"
+  - name: "12:00 - 1:30 Final work on group projects"
+  - name: "1:30 - 4:30 Present group projects (*Zoom*)"
+  - name: "4:30 - 5:00 Closing Plenary address and Q&A, Paul Decker, President and Chief Executive Officer, Mathematica"
+  - name: "5:00 - 5:15 Break"
+  - name: "5:15 - 5:45 Debrief and conclusion"
